spectec/test/elab/neg/ctx-type-already-defined-in-prem.spectec
;; A rule premise binds a meta-variable identifier that already has
;; a typdef in scope.

syntax foo = nat

relation R: foo |- foo
  hint(input %0)

rule R/foo:
  0 |- 0
  -- var foo : nat
